--- a/pages/arte/projetos/projetos.html
+++ b/pages/arte/projetos/projetos.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Outros Projetos - pedroluz</title>
+    <title>outros projetos artísticos 🧙🏻‍♂️</title>
     <link rel="icon" href="../../../assets/icons/pedroluz.ico" sizes="any">
     <link rel="shortcut icon" type="image/x-icon" href="../../../assets/icons/pedroluz.ico">
     <link rel="stylesheet" href="../../../css/styles.css">
@@ -30,13 +30,12 @@
                     <li><a href="projetos.html">outros projetos</a></li>
                 </ul>
             </li>
-            <li><a href="#">código</a></li>
+            <li><a href="../../../pages/software.html">software</a></li>
         </ul>
     </nav>
     <main class="content">
         <div class="content-block title-block">
-            <h2;">Outros Projetos</h2>
-            <hr class="content-divider">
+            <h2>Outros projetos artísticos 🧙🏻‍♂️</h2>
         </div>
         
         <a href="wisemutts.html" class="project-link">
