--- a/pages/arte/projetos/sta_marta.html
+++ b/pages/arte/projetos/sta_marta.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Farol de Santa Marta - pedroluz</title>
+    <title>farol de santa marta</title>
     <link rel="icon" href="../../../assets/icons/pedroluz.ico" sizes="any">
     <link rel="shortcut icon" type="image/x-icon" href="../../../assets/icons/pedroluz.ico">
     <link rel="stylesheet" href="../../../css/styles.css">
@@ -32,13 +32,13 @@
                     <li><a href="projetos.html">outros projetos</a></li>
                 </ul>
             </li>
-            <li><a href="#">código</a></li>
+            <li><a href="../../../pages/software.html">software</a></li>
         </ul>
     </nav>
     <main class="content">
         <div class="content-block title-block">
 
-            <h2;">Farol de Santa Marta</h2>
+            <h2>Farol de Santa Marta</h2>
             <p style="color: #898989; font-style: italic;">o velho, a Kombi e a decisão de pegar a estrada</p>
         </div>
         <div class="project-detail">
