--- a/pages/arte/projetos/wisemutts.html
+++ b/pages/arte/projetos/wisemutts.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>wise mutts - pedroluz</title>
+    <title>wise mutts</title>
     <link rel="icon" href="../../../assets/icons/wisemutts.ico" sizes="any">
     <link rel="shortcut icon" type="image/x-icon" href="../../../assets/icons/wisemutts.ico">
     <link rel="stylesheet" href="../../../css/styles.css">
@@ -31,7 +31,7 @@
                     <li><a href="projetos.html">outros projetos</a></li>
                 </ul>
             </li>
-            <li><a href="#">código</a></li>
+            <li><a href="../../../pages/software.html">software</a></li>
         </ul>
     </nav>
     <main class="content">
