--- a/pages/arte/poesias.html
+++ b/pages/arte/poesias.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Poesias - pedroluz</title>
+    <title>poesia 🌷</title>
     <link rel="icon" href="../../assets/icons/pedroluz.ico" sizes="any">
     <link rel="shortcut icon" type="image/x-icon" href="../../assets/icons/pedroluz.ico">
     <link rel="stylesheet" href="../../css/styles.css">
@@ -33,7 +33,7 @@
                     <li><a href="projetos/projetos.html">outros projetos</a></li>
                 </ul>
             </li>
-            <li><a href="#">código</a></li>
+            <li><a href="../../pages/software.html">software</a></li>
         </ul>
     </nav>
     <main class="content">
