--- a/pages/arte/projetos/criatura.html
+++ b/pages/arte/projetos/criatura.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Uma criaturinha interessante - pedroluz</title>
+    <title>uma criaturinha interessante</title>
     <link rel="icon" href="../../../assets/icons/pedroluz.ico" sizes="any">
     <link rel="shortcut icon" type="image/x-icon" href="../../../assets/icons/pedroluz.ico">
     <link rel="stylesheet" href="../../../css/styles.css">
@@ -33,12 +33,12 @@
                     <li><a href="projetos.html">outros projetos</a></li>
                 </ul>
             </li>
-            <li><a href="#">código</a></li>
+            <li><a href="../../../pages/software.html">software</a></li>
         </ul>
     </nav>
     <main class="content">
         <div class="content-block title-block">
-            <h2;">Uma criaturinha interessante</h2>
+            <h2>Uma criaturinha interessante</h2>
         </div>
         <div class="project-detail">
             <h2>Um encontro na beira do rio</h2>
