--- a/pages/software.html
+++ b/pages/software.html
@@ -30,7 +30,7 @@
                     <li><a href="../pages/arte/projetos/projetos.html">outros projetos</a></li>
                 </ul>
             </li>
-            <li><a href="../software.html">software</a></li>
+            <li><a href="software.html">software</a></li>
         </ul>
     </nav>
     <main class="content">
