--- a/pages/arte/musica.html
+++ b/pages/arte/musica.html
@@ -35,7 +35,7 @@
         </ul>
     </nav>
     <main class="content">
-        <div class="content-block title-block">
+        <div class="content-block">
             <h2>Música</h2>
             <hr class="content-divider">
             <p>Escuta agora e siga nas plataformas 🌷</p>
@@ -47,9 +47,12 @@
                     <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/b/b8/YouTube_Logo_2017.svg/512px-YouTube_Logo_2017.svg.png" alt="YouTube logo" style="height: 32px;">
                 </a>
             </p>
-            <iframe style="border-radius:12px; width: 100%; height: 225px; margin: 10px 0;" src="https://www.youtube.com/embed/Z7onMZBUI7A?si=4lOyKAd3H8M144kd" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-            <iframe style="border-radius:12px; width: 100%; height: 152px; margin: 10px 0;" src="https://open.spotify.com/embed/artist/2rj8ccj3Z0rfVh18nxzZUQ?utm_source=generator" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+            <iframe style="border-radius:12px; width: 70%; height: 152px; margin: 10px 0;" src="https://open.spotify.com/embed/artist/2rj8ccj3Z0rfVh18nxzZUQ?utm_source=generator" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+            <iframe style="border-radius:12px; width: 70%; height: 225px; margin: 10px 0;" src="https://www.youtube.com/embed/Z7onMZBUI7A?si=4lOyKAd3H8M144kd" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 
+            </div>
+
+        <div class="content-block">
             <h3 style="color: #6b629d; margin-bottom: 20px;">Outras plataformas</h3>
 
             <hr class="content-divider">
