LPs antigas redirecionadas

--- a/pages/lps/1000caminhos.html
+++ b/pages/lps/1000caminhos.html
@@ -1,14 +1,14 @@
 <!doctype html>
-<html lang="en">
+<html lang="pt-BR">
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1">
-    <title>Redirecting…</title>
-    <!-- Immediate meta refresh fallback for non-JS browsers -->
+    <title>Redirecionando…</title>
+    <!-- Redirecionamento imediato (fallback para navegadores sem JS) -->
     <meta http-equiv="refresh" content="0;url=/pages/arte/musica.html">
     <link rel="canonical" href="/pages/arte/musica.html">
     <script>
-      // Robust client-side redirect: replace history so back button doesn't return here
+      // Redirecionamento robusto no cliente: substitui o histórico para que o botão Voltar não retorne aqui
       (function(){
         var target = '/pages/arte/musica.html';
         if (location.pathname !== target) {
@@ -18,6 +18,6 @@
     </script>
   </head>
   <body>
-    <p>Redirecting to <a href="/pages/arte/musica.html">musica</a>… If you are not redirected, click the link.</p>
+    <p>Redirecionando para <a href="/pages/arte/musica.html">música</a>… Se você não for redirecionado, clique no link.</p>
   </body>
 </html>
