--- a/pages/lps/1000caminhos.html
+++ b/pages/lps/1000caminhos.html
@@ -36,7 +36,7 @@
     </nav>
     <main class="content">
         <div class="content-block">
-            <h2>1000 Caminhos</h2>
+            <h2>1000 Caminhos 🎸</h2>
             <p>Escuta agora 🌷</p>
         </div>
         <div class="content-block">
