--- a/pages/lps/sddsorkut.html
+++ b/pages/lps/sddsorkut.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>música 🎸</title>
+    <title>sdds orkut 💜</title>
     <link rel="icon" href="../../assets/icons/pedroluz.ico" sizes="any">
     <link rel="shortcut icon" type="image/x-icon" href="../../assets/icons/pedroluz.ico">
     <link rel="stylesheet" href="../../css/styles.css">
@@ -36,7 +36,7 @@
     </nav>
     <main class="content">
         <div class="content-block">
-            <h2>1000 Caminhos</h2>
+            <h2>sdds orkut 💜</h2>
             <p>Escuta agora 🌷</p>
         </div>
         <div class="content-block">
