--- a/pages/lps/sonholucido.html
+++ b/pages/lps/sonholucido.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sonho Lúcido</title>
+    <title>Sonho Lúcido 🧙🏻‍♂️</title>
     <link rel="icon" href="../../assets/icons/pedroluz.ico" sizes="any">
     <link rel="shortcut icon" type="image/x-icon" href="../../assets/icons/pedroluz.ico">
     <meta property="og:title" content="Sonho Lúcido" />
@@ -37,7 +37,7 @@
     </nav>
     <main class="content">
         <div class="content-block">
-            <h2>Sonho Lúcido</h2>
+            <h2>Sonho Lúcido 🧙🏻‍♂️</h2>
             <p>Escuta agora 🌷</p>
         </div>
         <div class="content-block">
