--- a/pages/lps/euacho.html
+++ b/pages/lps/euacho.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>música 🎸</title>
+    <title>eu acho 🌾 </title>
     <link rel="icon" href="../../assets/icons/pedroluz.ico" sizes="any">
     <link rel="shortcut icon" type="image/x-icon" href="../../assets/icons/pedroluz.ico">
     <link rel="stylesheet" href="../../css/styles.css">
@@ -34,18 +34,18 @@
     </nav>
     <main class="content">
         <div class="content-block">
-            <h2>1000 Caminhos</h2>
+            <h2>eu acho 🌾 </h2>
             <p>Escuta agora 🌷</p>
-        </div>
-        <div class="content-block">
-            <h3 style="color: #6b629d; margin-bottom: 20px;">(ᯤ) Spotify</h3>
-            <iframe data-testid="embed-iframe" style="border-radius:12px" src="https://open.spotify.com/embed/track/3lvGyHDUIlAM5ipm6cmobg?utm_source=generator" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
         </div>
         <div class="content-block">
             <h3 style="color: #6b629d; margin-bottom: 20px;">▶️ Youtube</h3>
             <iframe src="https://www.youtube.com/watch?v=FeE7907bBHA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 
-            </div>
+        </div>
+        <div class="content-block">
+            <h3 style="color: #6b629d; margin-bottom: 20px;">(ᯤ) Spotify</h3>
+            <iframe data-testid="embed-iframe" style="border-radius:12px" src="https://open.spotify.com/embed/track/3lvGyHDUIlAM5ipm6cmobg?utm_source=generator" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+        </div>
 
         <div class="content-block">
             <h3 style="color: #6b629d; margin-bottom: 20px;">Outras plataformas</h3>
