--- a/pages/lps/millennial.html
+++ b/pages/lps/millennial.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>música 🎸</title>
+    <title>Millennial 🏔️</title>
     <link rel="icon" href="../../assets/icons/pedroluz.ico" sizes="any">
     <link rel="shortcut icon" type="image/x-icon" href="../../assets/icons/pedroluz.ico">
     <link rel="stylesheet" href="../../css/styles.css">
@@ -36,12 +36,12 @@
     </nav>
     <main class="content">
         <div class="content-block">
-            <h2>1000 Caminhos</h2>
+            <h2>Millennial 🏔️</h2>
             <p>Escuta agora 🌷</p>
         </div>
         <div class="content-block">
             <h3 style="color: #6b629d; margin-bottom: 20px;">(ᯤ) Spotify</h3>
-            <iframe data-testid="embed-iframe" style="border-radius:12px" src="https://open.spotify.com/embed/track/3nMD0enYUV1bDuKgj4HLVl?utm_source=generator" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+            <iframe data-testid="embed-iframe" style="border-radius:12px" src="https://open.spotify.com/embed/album/3nMD0enYUV1bDuKgj4HLVl?utm_source=generator" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
         </div>
         <div class="content-block">
             <h3 style="color: #6b629d; margin-bottom: 20px;">▶️ Youtube</h3>
