Fixed LPs top menu relative paths

--- a/pages/lps/euacho.html
+++ b/pages/lps/euacho.html
@@ -24,9 +24,9 @@
             <li>
                 <a href="#" class="section-toggle">arte</a>
                 <ul class="subsection">
-                    <li><a href="musica.html">música</a></li>
-                    <li><a href="poesias.html">poesia</a></li>
-                    <li><a href="projetos/projetos.html">outros projetos</a></li>
+                    <li><a href="../musica.html">música</a></li>
+                    <li><a href="../poesias.html">poesia</a></li>
+                    <li><a href="../projetos/projetos.html">outros projetos</a></li>
                 </ul>
             </li>
             <li><a href="../../pages/software.html">software</a></li>
