--- a/pages/lps/meioblackmirror.html
+++ b/pages/lps/meioblackmirror.html
@@ -45,7 +45,7 @@
         </div>
         <div class="content-block">
             <h3 style="color: #6b629d; margin-bottom: 20px;">▶️ Youtube</h3>
-            <iframe src="https://www.youtube.com/watch?v=B6mL1C84B4U" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+            <iframe src="https://www.youtube.com/embed/B6mL1C84B4U" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 
             </div>
 
