Fixing embedding widths

--- a/pages/lps/1000caminhos.html
+++ b/pages/lps/1000caminhos.html
@@ -45,7 +45,13 @@
         </div>
         <div class="content-block">
             <h3 style="color: #6b629d; margin-bottom: 20px;">▶️ Youtube</h3>
-            <iframe src="https://www.youtube.com/embed/NRdQ2uLZBuo" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+            <iframe src="https://www.youtube.com/embed/NRdQ2uLZBuo"
+                    title="YouTube video player"
+                    frameborder="0"
+                    width="100%" 
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                    referrerpolicy="strict-origin-when-cross-origin"
+                    allowfullscreen></iframe>
             </div>
 
         <div class="content-block">
