--- a/pages/lps/meioblackmirror.html
+++ b/pages/lps/meioblackmirror.html
@@ -40,14 +40,20 @@
             <p>Escuta agora 🌷</p>
         </div>
         <div class="content-block">
+            <h3 style="color: #6b629d; margin-bottom: 20px;">▶️ Youtube</h3>
+            <iframe src="https://www.youtube.com/embed/B6mL1C84B4U"
+                    title="YouTube video player"
+                    frameborder="0"
+                    width="100%" 
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                    referrerpolicy="strict-origin-when-cross-origin"
+                    allowfullscreen></iframe>
+
+        </div>
+        <div class="content-block">
             <h3 style="color: #6b629d; margin-bottom: 20px;">(ᯤ) Spotify</h3>
             <iframe data-testid="embed-iframe" style="border-radius:12px" src="https://open.spotify.com/embed/track/0PPD0gayhsn7SYOONsasXW?utm_source=generator" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
         </div>
-        <div class="content-block">
-            <h3 style="color: #6b629d; margin-bottom: 20px;">▶️ Youtube</h3>
-            <iframe src="https://www.youtube.com/embed/B6mL1C84B4U" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-
-            </div>
 
         <div class="content-block">
             <h3 style="color: #6b629d; margin-bottom: 20px;">Outras plataformas</h3>
