--- a/pages/lps/lp.html
+++ b/pages/lps/lp.html
@@ -1,17 +1,13 @@
 <!DOCTYPE html>
-<html lang="pt-BR">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>poesia 🌷</title>
+    <title>Loading LP...</title>
     <link rel="icon" href="../../assets/icons/pedroluz.ico" sizes="any">
     <link rel="shortcut icon" type="image/x-icon" href="../../assets/icons/pedroluz.ico">
     <link rel="stylesheet" href="../../css/styles.css">
-    <link rel="stylesheet" href="../../css/poesias.css">
-    <link rel="stylesheet" href="../../css/image-popup.css">
-    <script defer src="../../js/poesias.js"></script>
-    <script defer src="../../js/image-popup.js"></script>
-    <script defer src="../../js/script.js"></script>
+    <script defer src="../../js/lp-factory.js"></script>
 </head>
 <body>
     <header class="topbar">
@@ -25,18 +21,16 @@
     <nav class="menu" id="top-menu">
         <ul>
             <li><a href="../../index.html">página inicial</a></li>
-            <li><a href="musica.html">música</a></li>
-            <li><a href="poesias.html">poesia</a></li>
-            <li><a href="projetos/projetos.html">outros projetos</a></li>
+            <li><a href="../../pages/arte/musica.html">música</a></li>
+            <li><a href="../../pages/arte/poesias.html">poesia</a></li>
+            <li><a href="../../pages/arte/projetos/projetos.html">outros projetos</a></li>
         </ul>
     </nav>
     <main class="content">
-        <div class="content-block title-block">
-            <h2>Poesia</h2>
+        <div class="content-block">
+            <p>Carregando...</p>
         </div>
     </main>
-    <div id="poesias-grid" class="image-thumbs">
-        <!-- Poems will be loaded dynamically via JavaScript -->
-    </div>
+    <script defer src="../../js/script.js"></script>
 </body>
 </html>
